# Initial_Orbit_Determination

./: CMakeLists.txt  Makefile_test_main.bat
include/: Accel.h  AccelHarmonic.h  AccelPointMass.h  AzElPa.h  Cheb3D.h  DEInteg.hpp  EccAnom.h  EqnEquinox.h  Frac.h  GHAMatrix.h  G_AccelHarmonic.h  Geodetic.h  IERS.h  JPL_Eph_DE430.h  LTC.h  Legendre.h  MeanObliquity.h  MeasUpdate.h  Mjday.h  Mjday_TDB.h  NutAngles.h  NutMatrix.h  PoleMatrix.h  Position.h  PrecMatrix.h  R_x.h  R_y.h  R_z.h  SAT_const.h  TimeUpdate.h  VarEqn.h  angl.h  anglesg.h  elements.h  gast.h  gibbs.h  global.h  gmst.h  hgibbs.h  matrix.h  (+5 more)
src/: Accel.cpp  AccelHarmonic.cpp  AccelPointMass.cpp  AzElPa.cpp  Cheb3D.cpp  DEInteg.cpp  EccAnom.cpp  EqnEquinox.cpp  Frac.cpp  GHAMatrix.cpp  G_AccelHarmonic.cpp  Geodetic.cpp  IERS.cpp  JPL_Eph_DE430.cpp  LTC.cpp  Legendre.cpp  MeanObliquity.cpp  MeasUpdate.cpp  Mjday.cpp  Mjday_TDB.cpp  NutAngles.cpp  NutMatrix.cpp  PoleMatrix.cpp  Position.cpp  PrecMatrix.cpp  R_x.cpp  R_y.cpp  R_z.cpp  TimeUpdate.cpp  VarEqn.cpp  angl.cpp  anglesg.cpp  elements.cpp  gast.cpp  gibbs.cpp  global.cpp  gmst.cpp  hgibbs.cpp  matrix.cpp  rpoly.cpp  (+4 more)
tests/: EKF_GEOS3.cpp  test_main.cpp
