cmake_minimum_required(VERSION 3.23)
project(Initial_Orbit_Determination)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)

add_executable(Initial_Orbit_Determination
        bin/main_tests.exe
        bin/test_main.exe
        data/DE430Coeff.txt
        data/eop19620101.txt
        data/GEOS3.txt
        data/GGM03S.txt
        include/Accel.h
        include/AccelHarmonic.h
        include/AccelPointMass.h
        include/angl.h
        include/AzElPa.h
        include/Cheb3D.h
        include/EccAnom.h
        include/elements.h
        include/EqnEquinox.h
        include/Frac.h
        include/G_AccelHarmonic.h
        include/gast.h
        include/Geodetic.h
        include/GHAMatrix.h
        include/gibbs.h
        include/global.h
        include/gmst.h
        include/IERS.h
        include/JPL_Eph_DE430.h
        include/Legendre.h
        include/LTC.h
        include/matrix.h
        include/MeanObliquity.h
        include/MeasUpdate.h
        include/Mjday.h
        include/Mjday_TDB.h
        include/NutAngles.h
        include/NutMatrix.h
        include/PoleMatrix.h
        include/Position.h
        include/PrecMatrix.h
        include/rpoly.h
        include/R_x.h
        include/R_y.h
        include/R_z.h
        include/SAT_const.h
        include/sign_.h
        include/timediff.h
        include/TimeUpdate.h
        include/unit.h
        include/utils.h
        src/Accel.cpp
        src/AccelHarmonic.cpp
        src/AccelPointMass.cpp
        src/angl.cpp
        src/AzElPa.cpp
        src/Cheb3D.cpp
        src/DEInteg.cpp
        src/EccAnom.cpp
        src/elements.cpp
        src/EqnEquinox.cpp
        src/Frac.cpp
        src/G_AccelHarmonic.cpp
        src/gast.cpp
        src/Geodetic.cpp
        src/GHAMatrix.cpp
        src/gibbs.cpp
        src/global.cpp
        src/gmst.cpp
        src/IERS.cpp
        src/JPL_Eph_DE430.cpp
        src/Legendre.cpp
        src/LTC.cpp
        src/matrix.cpp
        src/MeanObliquity.cpp
        src/MeasUpdate.cpp
        src/Mjday.cpp
        src/Mjday_TDB.cpp
        src/NutAngles.cpp
        src/NutMatrix.cpp
        src/PoleMatrix.cpp
        src/Position.cpp
        src/PrecMatrix.cpp
        src/rpoly.cpp
        src/R_x.cpp
        src/R_y.cpp
        src/R_z.cpp
        src/sign.cpp
        src/timediff.cpp
        src/TimeUpdate.cpp
        src/unit.cpp
        src/utils.cpp
        tests/EKF_GEOS3.cpp
        tests/test_main.cpp include/hgibbs.h src/hgibbs.cpp include/VarEqn.h src/VarEqn.cpp include/DEInteg.hpp include/anglesg.h src/anglesg.cpp)
